enhace experince, track authenticated-users